--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,19 @@
 Package: gamlss.data
-Description: Data used as examples in the current two books on Generalised Additive Models for Location Scale and Shape introduced by Rigby and Stasinopoulos (2005), <doi:10.1111/j.1467-9876.2005.00510.x>.
-Title: Data for Generalised Additive Models for Location Scale and
-        Shape
-LazyData: yes
+Title: Data for Generalized Additive Models for Location Scale and Shape
 Version: 6.0-6
 Date: 2024-03-14
-Depends: R (>= 3.5.0)
-Author: Mikis Stasinopoulos <d.stasinopoulos@gre.ac.uk>, Bob
-        Rigby, Fernanda De Bastiani 
-Maintainer: Mikis Stasinopoulos <d.stasinopoulos@gre.ac.uk>
+Authors@R: c(person("Mikis", "Stasinopoulos", role = c("aut", "cre"), 
+           email = "d.stasinopoulos@gre.ac.uk", comment = c(ORCID = "0000-0003-2407-5704")),
+           person("Robert", "Rigby", role = "aut", email = "r.rigby@gre.ac.uk", comment = c(ORCID = "0000-0003-3853-1707")),
+           person("Fernanda", "De Bastiani", role = "ctb", comment = c(ORCID = "0000-0001-8532-639X"))
+           )
+Description: Data used as examples in the books on Generalized Additive Models for Location Scale and Shape:
+  Stasinopoulos, Rigby, Heller, Voudouris, De Bastiani (2017). Flexible Regression and Smoothing: Using GAMLSS in R, <doi:10.1201/b21973>.
+  Rigby, Stasinopoulos, Heller, De Bastiani (2019). Distributions for Modeling Location, Scale, and Shape Using GAMLSS in R, <doi:10.1201/9780429298547>.
+  Stasinopoulos, Kneib, Klein, Mayr, Heller (2024). Generalized Additive Models for Location, Scale and Shape: A Distributional Regression Approach, with Applications, <doi:10.1017/9781009410076>.
 License: GPL-2 | GPL-3
 URL: https://www.gamlss.com/
+BugReports: https://github.com/gamlss-dev/gamlss.data/issues
+Depends: R (>= 3.5.0)
+LazyData: yes
 NeedsCompilation: no
-Packaged: 2021-11-07 06:40:18 UTC; dimitriosstasinopoulos
-Repository: CRAN
-Date/Publication: 2021-11-07 07:00:01 UTC
